Fix: changed spacing on icons

--- a/src/components/MyPhilosophy/MyPhilosophy.scss
+++ b/src/components/MyPhilosophy/MyPhilosophy.scss
@@ -16,9 +16,9 @@
             .title-container {
                 display: flex;
                 align-items: center;
+                padding: 1.2rem 0;
 
                 h3 {
-                    padding: 1.3rem 0;
                     font-size: 2rem;
                     max-width: 50vw;
                 }
